--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <script src="preamble.js"></script>
-    <title>vectors</title>
+    <title>جبر الأشعة</title>
 </head>
 <body>
     <div class="container">
@@ -25,10 +25,24 @@
             نَرْمُز لِمقدار شعاعي ما بالرمز $\vect{A}$ (حرف ثخين فوقه سهم) أو $\overrightarrow{PQ}$ و المقصود به الشعاع من النقطة $A$ إلى النقطة $B$.
             نَرْمُز  لطويلة الشعاع $\vect{A}$ بالرمز $\abs{\vect{A}}$ أو ببساطة $A$،
             و نَرْمُز  لطويلة الشعاع $\overrightarrow{PQ}$ بالرمز $|\overrightarrow{PQ}|$.
-            \begin{equation*}
+            \begin{equation}
                 A=\left| \vect{A} \right|, \qquad A \ge 0
-            \end{equation*}
+            \end{equation}
         </p>
-    </div>
+        <h2>شعاع الواحدة</h2>
+        <p>
+            نقول عن الشعاع الذي طويلته تساوي العدد واحد أنه 
+            <span class="phrase">شعاع واحدة</span>.
+            يمكن الحصول على شعاع الواحدة بتقسيم الشعاع على طويلته.
+            \begin{equation}
+                \uvect{A}=\frac{\vect{A}}{\left| \vect{A} \right|}=\frac{\vect{A}}{A}
+                \label{eq:unit-vector-definition}
+            \end{equation}
+            يمكن التعبير عن أي شعاع $\vect{A}$ بأنه شعاع الواحدة له $\uvect{A}$ الذي جهته من جهة $\vect{A}$ مضروباً بطويلة الشعاع $\vect{A}$،
+            هذا يعني أن:
+            \begin{equation}
+                \vect{A} = \abs{\vect{A}} \uvect{A} = A \uvect{A}
+            \end{equation}
+        </p>
 </body>
 </html>
