zero vector and fixes

--- a/index.html
+++ b/index.html
@@ -44,5 +44,17 @@
                 \vect{A} = \abs{\vect{A}} \uvect{A} = A \uvect{A}
             \end{equation}
         </p>
+        <h2>الشعاع الصِّفْرِي</h2>
+        <p>
+            نقول عن شعاع أنَّه <span class="phrase">شعاع صفري</span>
+            إذا كانت طويلته العدد صفر،
+            و نرمز له $\vect{0}$ أو ببساطة $0$،
+            هذا يعني:
+
+            \begin{equation}
+                \mathrm{if}\, A=0 \Rightarrow \vect{A}=\vect{0}
+            \end{equation}
+        </p>
+    </div>
 </body>
 </html>
