--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             يُمَثَّل الشعاع بسهم حيث أنَّ طول السهم يُعَبِّر عن 
             <span class="phrase">طَوِيْلَة الشعاع</span>، 
             نَرْمُز لِمقدار شعاعي ما بالرمز $\vect{A}$ (حرف ثخين فوقه سهم) أو $\overrightarrow{PQ}$ و المقصود به الشعاع من النقطة $A$ إلى النقطة $B$.
-            نَرْمُز  لطويلة الشعاع $\vect{A}$ بالرمز $\abs{\vect{A}}$ أو ببساطة $A$،
+            نَرْمُز  لطويلة الشعاع $\vect{A}$ بالرمز $\norm{\vect{A}}$ أو ببساطة $A$،
             و نَرْمُز  لطويلة الشعاع $\overrightarrow{PQ}$ بالرمز $|\overrightarrow{PQ}|$.
             \begin{equation}
-                A=\left| \vect{A} \right|, \qquad A \ge 0
+                A=\norm{\vect{A}}, \qquad A \ge 0
             \end{equation}
         </p>
         <h2>شعاع الواحدة</h2>
@@ -35,13 +35,13 @@
             <span class="phrase">شعاع واحدة</span>.
             يمكن الحصول على شعاع الواحدة بتقسيم الشعاع على طويلته.
             \begin{equation}
-                \uvect{A}=\frac{\vect{A}}{\left| \vect{A} \right|}=\frac{\vect{A}}{A}
+                \uvect{A}=\frac{\vect{A}}{\norm{\vect{A}}}=\frac{\vect{A}}{A}
                 \label{eq:unit-vector-definition}
             \end{equation}
             يمكن التعبير عن أي شعاع $\vect{A}$ بأنه شعاع الواحدة له $\uvect{A}$ الذي جهته من جهة $\vect{A}$ مضروباً بطويلة الشعاع $\vect{A}$،
             هذا يعني أن:
             \begin{equation}
-                \vect{A} = \abs{\vect{A}} \uvect{A} = A \uvect{A}
+                \vect{A} = \norm{\vect{A}} \uvect{A} = A \uvect{A}
             \end{equation}
         </p>
         <h2>الشعاع الصِّفْرِي</h2>
