zero vector note

--- a/index.html
+++ b/index.html
@@ -55,6 +55,20 @@
                 \mathrm{if}\, A=0 \Rightarrow \vect{A}=\vect{0}
             \end{equation}
         </p>
+        <div class="card border-danger">
+            <div class="card-header bg-danger text-white">
+                ملاحظة
+            </div>
+            <div class="card-body">
+                
+                <p>
+                    اتجاه الشعاع الصفري غير معرف و ذلك لأن:
+                    \begin{equation*}
+                        \uvect{0} = \frac{\vect{0}}{\abs{\vect{0}}} = \frac{\vect{0}}{0} \Rightarrow \uvect{0} \, \mathrm{is\,undefined}
+                    \end{equation*}
+                </p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
