--- a/index.html
+++ b/index.html
@@ -71,6 +71,20 @@
                 </p>
             </div>
         </div>
+        <h2>خصائص الأشعة</h2>
+        <p>
+            <ol>
+                <li>
+                    يتساوى شعاعين $\vect{A}$ و $\vect{B}$ إذا كان لهما الطويلة نفسها و الاتجاه نفسه،
+                    بصرف النظر عن نقطة البدء لهما.
+                </li>
+                <li>
+                    أي شعاع له اتجاه معاكس لاتجاه الشعاع المعطى $\vect{A}$ لكن له الطويلة نفسها يرمز له $-\vect{A}$
+                    و ندعوه <span class="phrase">الشعاع السالب</span>
+                    لـ $\vect{A}$.
+                </li>
+            </ol>
+        </p>
     </div>
 </body>
 </html>
