parallel vectors definition

--- a/index.html
+++ b/index.html
@@ -85,6 +85,12 @@
                 </li>
             </ol>
         </p>
+        <h2>الأشعة المتوازية</h2>
+        <p>
+            نقول عن أشعة أنها
+            <span class="phrase">متوازية</span>
+            عندما تكون على الحامل نفسه و لها الاتجاه نفسه.
+        </p>
     </div>
 </body>
 </html>
