--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 <body>
     <div class="container">
         <h1>جبر الأشعة</h1>
-        <h2>المقادير الشعاعية</h2>
+        <h2>مقدِّمة عن الأشعة</h2>
+        <h3>المقادير الشعاعية</h3>
         <p>
             المقادير الشعاعية هي مقادير لها قيمة و اتجاه.
             يُمَثَّل الشعاع بسهم حيث أنَّ طول السهم يُعَبِّر عن 
@@ -31,7 +32,7 @@
                 A=\norm{\vect{A}}, \qquad A \ge 0
             \end{equation}
         </p>
-        <h2>شعاع الواحدة</h2>
+        <h3>شعاع الواحدة</h3>
         <p>
             نقول عن الشعاع الذي طويلته تساوي العدد واحد أنه 
             <span class="phrase">شعاع واحدة</span>.
@@ -46,7 +47,7 @@
                 \vect{A} = \norm{\vect{A}} \uvect{A} = A \uvect{A}
             \end{equation}
         </p>
-        <h2>الشعاع الصِّفْرِي</h2>
+        <h3>الشعاع الصِّفْرِي</h3>
         <p>
             نقول عن شعاع أنَّه <span class="phrase">شعاع صفري</span>
             إذا كانت طويلته العدد صفر،
@@ -57,7 +58,7 @@
                 \mathrm{if}\, A=0 \Rightarrow \vect{A}=\vect{0}
             \end{equation}
         </p>
-        <div class="card border-danger">
+        <div class="card border-danger mb-3">
             <div class="card-header bg-danger text-white">
                 ملاحظة
             </div>
@@ -71,7 +72,7 @@
                 </p>
             </div>
         </div>
-        <h2>خصائص الأشعة</h2>
+        <h3>خصائص الأشعة</h3>
         <p>
             <ol>
                 <li>
@@ -85,12 +86,26 @@
                 </li>
             </ol>
         </p>
-        <h2>الأشعة المتوازية</h2>
+        <h3>الأشعة المتوازية</h3>
         <p>
             نقول عن أشعة أنها
             <span class="phrase">متوازية</span>
             عندما تكون على الحامل نفسه و لها الاتجاه نفسه.
         </p>
+        <figure class="figure">
+            <img src="imgs/parallel_vec.png" class="figure-img img-fluid rounded mx-auto" alt="parallel vectors">
+            <figcaption class="figure-caption">أشعة متوازية.</figcaption>
+        </figure>
+        <h3>الأشعة المتوازية عكسياً</h3>
+        <p>
+            نقول عن أشعة أنها
+            <span class="phrase">متوازية عكسياً</span>
+            عندما تكون على الحامل نفسه و جهة أحد الشعاعين تعاكس جهة الشعاع الآخر.
+        </p>
+        <figure class="figure">
+            <img src="imgs/antiparallel_vec.png" class="figure-img img-fluid rounded mx-auto" alt="antiparallel vectors">
+            <figcaption class="figure-caption"> عكسياًأشعة متوازية.</figcaption>
+        </figure>
     </div>
 </body>
 </html>
