--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </p>
         <figure class="figure">
             <img src="imgs/antiparallel_vec.png" class="figure-img img-fluid rounded mx-auto" alt="antiparallel vectors">
-            <figcaption class="figure-caption"> عكسياًأشعة متوازية.</figcaption>
+            <figcaption class="figure-caption">أشعة متوازية عكسياً.</figcaption>
         </figure>
     </div>
 </body>
