fixed typos, new definiton, vector addition

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             المقادير الشعاعية هي مقادير لها قيمة و اتجاه.
             يُمَثَّل الشعاع بسهم حيث أنَّ طول السهم يُعَبِّر عن 
             <span class="phrase">طَوِيْلَة الشعاع</span>، 
-            نَرْمُز لِمقدار شعاعي ما بالرمز $\vect{A}$ (حرف ثخين فوقه سهم) أو $\overrightarrow{PQ}$ و المقصود به الشعاع من النقطة $A$ إلى النقطة $B$.
+            نَرْمُز لِمقدار شعاعي ما بالرمز $\vect{A}$ (حرف ثخين فوقه سهم) أو $\overrightarrow{PQ}$ و المقصود به الشعاع من النقطة $P$ إلى النقطة $Q$.
             نَرْمُز  لطويلة الشعاع $\vect{A}$ بالرمز $\norm{\vect{A}}$ أو ببساطة $A$،
             و نَرْمُز  لطويلة الشعاع $\overrightarrow{PQ}$ بالرمز $|\overrightarrow{PQ}|$.
             \begin{equation}
@@ -106,6 +106,18 @@
             <img src="imgs/antiparallel_vec.png" class="figure-img img-fluid rounded mx-auto" alt="antiparallel vectors">
             <figcaption class="figure-caption">أشعة متوازية عكسياً.</figcaption>
         </figure>
+        <h3>الأشعة المتخالفة</h3>
+        <p>
+            نقول عن أشعة أنها
+            <span class="phrase">متخالفة</span>
+            لم تكن على الحامل نفسه.
+        </p>
+        <h2>جمع الأشعة</h2>
+        <p>
+            تختلف طبيعة جمع الأشعة عن طبيعة جمع الأعداد،
+            ففي حالة جمع الأعداد فإننا نكتفي فقط بجمع قيمها مع الانتباه إلى واحدات المقادير التي يتم جمعها،
+            أما في حالة الأشعة فيجب الأخذ بعين الاعتبار اتجاه الأشعة التي نجمعها.
+        </p>
     </div>
 </body>
 </html>
