--- a/index.html
+++ b/index.html
@@ -118,6 +118,47 @@
             ففي حالة جمع الأعداد فإننا نكتفي فقط بجمع قيمها مع الانتباه إلى واحدات المقادير التي يتم جمعها،
             أما في حالة المُتَّجِهَات فيجب الأخذ بعين الاعتبار اتجاه المُتَّجِهَات التي نجمعها.
         </p>
+        <h3>جمع المُتَّجِهَات المتوازية</h3>
+        <p>
+            حاصل جمع مُتَّجِهين $\vect{A}$ و $\vect{B}$ لهما الاتجاه نفسه هو مُتَّجِه آخر من جهة المُتَّجِهين و طويلته تساوي مجموع طويلتي المُتَّجِهين $\vect{A}$ و $\vect{B}$.
+        </p>
+        <h3>جمع المُتَّجِهَات المتوازية عكسياً</h3>
+        <p>
+            حاصل جمع مُتَّجِهين متعاكسين في الاتجاه هو مُتَّجِه آخر جهته من جهة المُتَّجِه ذو الطويلة الأكبر،
+            و طويلته تساوي حاصل طرح طويلة المُتَّجِهين بالقيمة المطلقة.
+        </p>
+        <h3>جمع المُتَّجِهَات في الحالة العامة</h3>
+        <p>
+            نستطيع جمع المُتَّجِهَات هندسياً بطريقتين
+        </p>
+        <h4>طريقة المُضَلَّعَات</h4>
+        <p>
+            <ol>
+                <li>
+                    نضع نقطة البداية للمُتَّجِه $\vect{B}$ على نهاية المُتَّجِه $\vect{A}$.
+                </li>
+                <li>
+                    نصل بين بداية المُتَّجِه $\vect{A}$ و نهاية المُتَّجِه $\vect{B}$ لنحصل على المُتَّجِه $\vect{A}+\vect{B}$، و يكون اتجاه المُتَّجِه الناتج من بداية $\vect{A}$ إلى نهاية $\vect{B}$.
+                </li>
+            </ol>
+        </p>
+        <h4>طريقة متوازي الأضلاع</h4>
+        <p>
+            <ol>
+                <li>
+                    نضع بداية المُتَّجِهين $\vect{A}$ و $\vect{B}$ عند النقطة نفسها.
+                </li>
+                <li>
+                    نرسم ممدداً من المُتَّجِه $\vect{B}$ موازياً للمُتَّجِه $\vect{A}$ و نرسم ممدداً آخر من المُتَّجِه $\vect{A}$ موازياُ للمُتَّجِه $\vect{B}$.
+                </li>
+                <li>
+                    نقطة تلاقي هذين الممددين تعطينا نقطة النهاية للمُتَّجِه الناتج عن جمع المُتَّجِهين.
+                </li>
+                <li>
+                    يكون حاصل جمع المُتَّجِهين هو القطر الرئيسي لمتوازي الأضلاع المحدد بالمُتَّجِهين $\vect{A}$ و $\vect{B}$.
+                </li>
+            </ol>
+        </p>
     </div>
 </body>
 </html>
