vector subtraction and vector properties

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <p>
             <ol>
                 <li>
-                    يتساوى مُتَّجِهن $\vect{A}$ و $\vect{B}$ إذا كان لهما الطَوِيْلَة نفسها و الاتجاه نفسه،
+                    يتساوى مُتَّجِهين $\vect{A}$ و $\vect{B}$ إذا كان لهما الطَوِيْلَة نفسها و الاتجاه نفسه،
                     بصرف النظر عن نقطة البدء لهما.
                 </li>
                 <li>
@@ -100,18 +100,18 @@
         <p>
             نقول عن مُتَّجِهات أنها
             <span class="phrase">متوازية عكسياً antiparallel</span>
-            عندما تكون على الحامل نفسه و جهة أحد المُتَّجِهن تعاكس جهة المُتَّجِه الآخر.
+            عندما تكون على الحامل نفسه و جهة أحد المُتَّجِهين تعاكس جهة المُتَّجِه الآخر.
         </p>
         <figure class="figure">
             <img src="imgs/antiparallel_vec.png" class="figure-img img-fluid rounded mx-auto" alt="antiparallel vectors">
             <figcaption class="figure-caption">مُتَّجِهات متوازية عكسياً.</figcaption>
         </figure>
-        <h3>المُتَّجِهَات المتخالفة</h3>
+        <!-- <h3>المُتَّجِهَات المتخالفة</h3>
         <p>
             نقول عن مُتَّجِهات أنها
             <span class="phrase">متخالفة</span>
             إذا لم تكن على الحامل نفسه.
-        </p>
+        </p> -->
         <h2>جمع المُتَّجِهَات</h2>
         <p>
             تختلف طبيعة جمع المُتَّجِهَات عن طبيعة جمع الأعداد،
@@ -156,6 +156,59 @@
                 </li>
                 <li>
                     يكون حاصل جمع المُتَّجِهين هو القطر الرئيسي لمتوازي الأضلاع المحدد بالمُتَّجِهين $\vect{A}$ و $\vect{B}$.
+                </li>
+            </ol>
+        </p>
+        <h3>طرح شعاعين</h3>
+        <p>
+            عملية طرح الشعاع $\vect{B}$ من $\vect{A}$ تعني بشكل مكافئ جمع الشعاع $\vect{A}$ مع الشعاع الذي له طويلة الشعاع $\vect{B}$ نفسها لكن جهته تعاكس جهة الشعاع $\vect{B}$.
+            يتم طرح مُتَّجِهين هندسياً كما يلي:
+        </p>
+        <p>
+            <ol>
+                <li>
+                    نضع بداية الشعاعين $\vect{A}$ و $\vect{B}$ عند النقطة نفسها.
+                </li>
+                <li>
+                    نرسم الشعاع $-\vect{B}$  الذي طويلته تساوي طويلة الشعاع $\vect{B}$ لكن يعاكس اتجاهه.
+                </li>
+                <li>
+                    نرسم ممدداً من الشعاع $-\vect{B}$ موازياً للشعاع $\vect{A}$ و نرسم ممدداً آخر من الشعاع $\vect{A}$ موازياُ للشعاع $-\vect{B}$.
+                </li>
+                <li>
+                    نقطة تلاقي الممددين تعطي نقطة النهاية للشعاع $\vect{A}-\vect{B}$.
+                </li>
+                <li>
+                    نصل بين نقطة البداية للشعاعين $\vect{A}$ و $-\vect{B}$ مع نقطة النهاية التي حصلنا عليها فنحصل على الشعاع $\vect{A}-\vect{B}$.
+                </li>
+            </ol>
+        </p>
+        <h3>خصائص جمع الأشعة</h3>
+        <p>
+            <ol>
+                <li>
+                    عملية جمع الأشعة عملية تبديلية:
+                    \begin{equation*}
+                        \vect{A}+\vect{B}=\vect{B}+\vect{A}
+                    \end{equation*}
+                </li>
+                <li>
+                    عملية جمع الأشعة عملية تجميعية:
+                    \begin{equation*}
+                        \left( \vect{A}+\vect{B} \right) + \vect{C} = \vect{A} + \left( \vect{B}+\vect{C} \right)
+                    \end{equation*}
+                </li>
+                <li>
+                    يوجد شعاع صفري $\vect{0}$ يحقق ما يلي من أجل أي شعاع $\vect{A}$:
+                    \begin{equation*}
+                        \vect{A} + \vect{0} = \vect{0} + \vect{A} = \vect{A}
+                    \end{equation*}
+                </li>
+                <li>
+                    من أجل أي شعاع $\vect{A}$، يوجد شعاع $-\vect{A}$ يحقق:
+                    \begin{equation*}
+                        \vect{A} + \left( -\vect{A} \right) = \left( -\vect{A} \right) + \vect{A} = \vect{0} 
+                    \end{equation*}
                 </li>
             </ol>
         </p>
