--- a/index.html
+++ b/index.html
@@ -212,6 +212,16 @@
                 </li>
             </ol>
         </p>
+        <h2>الجُداء السُّلَّمِي</h2>
+        <p>
+            نعرف <span class="phrase">الجُداء السُّلَّمِي</span>
+            بين شعاعين $\vect{A}$ و $\vect{B}$ و الذي نرمز له $\vect{A}\cdot\vect{B}$ على أنه جداء طوليتي الشعاعين $\vect{A}$ و $\vect{B}$ و كوساين أصغر زاوية بينهما، أي أن:
+            \begin{equation}
+                \vect{A}\cdot\vect{B} = \norm{\vect{A}} \norm{\vect{B}} \cos{\phi_{AB}}
+            \end{equation}
+            حيث أن $\phi_{AB}$ هي أصغر زاوية بين $\vect{A}$ و $\vect{B}$.
+            إن نتيجة الجداء السلمي بين شعاعين هي مقدار سلمي.
+        </p>
     </div>
 </body>
 </html>
