--- a/index.html
+++ b/index.html
@@ -212,7 +212,67 @@
                 </li>
             </ol>
         </p>
-        <h2>الجُداء السُّلَّمِي</h2>
+        <h2>ضرب الأشعة</h2>
+        <h3>تغيير قياس الشعاع: ضرب الشعاع بمقدار سلمي</h3>
+        <p>
+            يمكن تغيير قياس شعاع ما عن طريق ضرب طويلته بمقدار سلمي.
+            نعرف العملية التي نغير بها قياس الشعاع بالعلاقة:
+            \begin{equation}
+                \vect{A}=A\, \uvect{A}\Rightarrow k\,\vect{A}=\left( kA \right) \uvect{A}
+            \end{equation}
+            عندما نضرب الشعاع بمقدار سلمي موجب فهذا يعني أننا نزيد من طول الشعاع أو ننقص منه و ذلك بحسب قيمة $k$،
+            فإذا كان $\left| k \right|&gt;1$ عندها طويلة الشعاع الناتج تكون أكبر من طويلة الشعاع الأصلي،
+            أما إذا كان $0&lt;\left| k \right|&lt;1$ فإن طويلة الشعاع الجديد أقل من طويلة الشعاع الأصلي،
+            و عندما يكون $k=0$ فإن الشعاع الناتج هو الشعاع الصفري $\vect{0}$.
+            يكون الشعاع الناتج من جهة الشعاع الأصلي إذا كان $k&gt;0$،
+            أما إذا كان $k&lt;0$ عندها الشعاع الجديد يعاكس جهة الشعاع الأصلي.
+        </p>
+        <h4>خصائص عملية ضرب الأشعة بمقدار سلمي</h4>
+        <p>
+            لتكن $\vect{A}$ و $\vect{B}$ أشعة،
+            و لتكن $k$ و $p$ أعداداً سلمية،
+            نستعرض فيما يلي خصائص عملية الضرب بمقدار سلمي:
+        </p>
+        <ol>
+            <li>
+                عملية ضرب الشعاع بمقدار سلمي هي عملية تبديلية:
+                \begin{equation}
+                    k\,\vect{A}=\vect{A}\,k
+                \end{equation}
+            </li>
+            <li>
+                عملية ضرب الأشعة بمقدار سلمي هي عملية توزيعية:
+                \begin{equation}
+                    k\left( \vect{A}+\vect{B} \right)=k\vect{A}+k\vect{B}
+                    \label{eq:scalingisassociative}
+                \end{equation}
+            </li>
+            <li>
+                عملية ضرب الأعداد السلمية بشعاع أيضاً عملية توزيعية، هذا يعني أن:
+                \begin{equation}
+                    \left( k + p \right) \vect{A} = k\vect{A} + p\vect{A}
+                \end{equation}
+            </li>
+            <li>
+                إن ضرب الأعداد السلمية بشعاع هو عملية تجميعية، هذا يعني أنه لو ضربنا الشعاع بمقدار سلمي و من ثم ضربنا الناتج بمقدار سلمي فإننا نحصل على النتيجة نفسها عند ضرب العددين مع بعضهما و من ثم ضرب الناتج بالشعاع:
+                \begin{equation}
+                    k (p\,\vect{A}) = (kp) \vect{A}
+                \end{equation}
+            </li>
+            <li>
+                إن ضرب أي شعاع بالعدد $1$ يعطي الشعاع نفسه:
+                \begin{equation}
+                    1\left( \vect{A} \right) = \vect{A}
+                \end{equation}
+            </li>
+            <li>
+                ضرب أي مُتَّجِه بالعدد $0$ يعطي المُتَّجِه الصِّفْرِي:
+                \begin{equation}
+                    0\left( \vect{A} \right) = \vect{0}
+                \end{equation}
+            </li>
+        </ol>
+        <h3>الجُداء السُّلَّمِي</h3>
         <p>
             نعرف <span class="phrase">الجُداء السُّلَّمِي</span>
             بين شعاعين $\vect{A}$ و $\vect{B}$ و الذي نرمز له $\vect{A}\cdot\vect{B}$ على أنه جداء طوليتي الشعاعين $\vect{A}$ و $\vect{B}$ و كوساين أصغر زاوية بينهما، أي أن:
