linear dependece and independence

--- a/index.html
+++ b/index.html
@@ -272,6 +272,24 @@
                 \end{equation}
             </li>
         </ol>
+        <h4>الارتباط الخَطِّي و الاستقلال الخَطِّي</h4>
+        <p>
+            نقول عن شعاع $\vect{A}$ أنه مرتبط خطياً مع شعاع آخر $\vect{B}$ إذا وُجِدَ مقداراً سلمياً $k \neq 0$ يحقق $\vect{B} = k\, \vect{A}$.
+            هذا يعني أنه إذا كان الشعاعين $\vect{A}$ و $\vect{B}$ مرتبطين خطياً فإن حاملين هذين الشعاعين يكون مشتركاً.
+            أما إذا كان $k=0$ هو المقدار السلمي الوحيد الذي يحقق $\vect{B} = k\, \vect{A}$ عندها نقول عن الشعاعين أنهما مستقلين خطياً، و هذا يعني أن لكل شعاع حامل مختلف.
+        </p>
+        <p>
+            بإمكاننا تعميم الارتباط الخطي و الاستقلال الخطي بين شعاعين إلى مجموعة من الأشعة.
+            إذا كانت لدينا الأشعة $\vect{A}_{1},\vect{A}_{2},\dots,\vect{A}_{n}$ و استطعنا إيجاد أعداداً سلمية $a_{1},a_{2},\dots,a_{n}$ لا تساوي الصفر بحيث تحقق:
+            \begin{equation}
+                a_{1} \vect{A}_{1} + a_{2} \vect{A}_{2} + \dots + a_{n} \vect{A}_{n} = \vect{0}
+                \label{eq:linear-dependence-of-vectors}
+            \end{equation}
+            عندئذٍ نقول عن الأشعة $\vect{A}_{1},\vect{A}_{2},\dots,\vect{A}_{n}$ أنها مرتبطة خطياً.
+            أما إذا كان الحل الوحيد الذي يحقق $(\ref{eq:linear-dependence-of-vectors})$ هو أن يكون
+            $a_{1}=a_{2}=\dots=a_{n}=0$
+            عندئذٍ نقول عن الأشعة $\vect{A}_{1},\vect{A}_{2},\dots,\vect{A}_{n}$ أنها مستقلة خطياً عن بعضها البعض.
+        </p>
         <h3>الجُداء السُّلَّمِي</h3>
         <p>
             نعرف <span class="phrase">الجُداء السُّلَّمِي</span>
