--- a/index.html
+++ b/index.html
@@ -275,8 +275,8 @@
         <h4>الارتباط الخَطِّي و الاستقلال الخَطِّي</h4>
         <p>
             نقول عن شعاع $\vect{A}$ أنه مرتبط خطياً مع شعاع آخر $\vect{B}$ إذا وُجِدَ مقداراً سلمياً $k \neq 0$ يحقق $\vect{B} = k\, \vect{A}$.
-            هذا يعني أنه إذا كان الشعاعين $\vect{A}$ و $\vect{B}$ مرتبطين خطياً فإن حاملين هذين الشعاعين يكون مشتركاً.
-            أما إذا كان $k=0$ هو المقدار السلمي الوحيد الذي يحقق $\vect{B} = k\, \vect{A}$ عندها نقول عن الشعاعين أنهما مستقلين خطياً، و هذا يعني أن لكل شعاع حامل مختلف.
+            هذا يعني أنه إذا كان الشعاعين $\vect{A}$ و $\vect{B}$ <span class="phrase">مرتبطين خطياً linearly dependent</span> فإن حاملين هذين الشعاعين يكون مشتركاً.
+            أما إذا كان $k=0$ هو المقدار السلمي الوحيد الذي يحقق $\vect{B} = k\, \vect{A}$ عندها نقول عن الشعاعين أنهما <span class="phrase">مستقلين خطياً linearly independent</span>، و هذا يعني أن لكل شعاع حامل مختلف.
         </p>
         <p>
             بإمكاننا تعميم الارتباط الخطي و الاستقلال الخطي بين شعاعين إلى مجموعة من الأشعة.
@@ -289,6 +289,18 @@
             أما إذا كان الحل الوحيد الذي يحقق $(\ref{eq:linear-dependence-of-vectors})$ هو أن يكون
             $a_{1}=a_{2}=\dots=a_{n}=0$
             عندئذٍ نقول عن الأشعة $\vect{A}_{1},\vect{A}_{2},\dots,\vect{A}_{n}$ أنها مستقلة خطياً عن بعضها البعض.
+        </p>
+        <h4>التركيب الخَطِّي للأشعة</h4>
+        <p>
+            ليكن لدينا الأشِعَّة $\vect{A}_{1},\vect{A}_{2},\dots,\vect{A}_{n}$، و المقاديرالسُّلَّمِيَّة $a_{1},a_{2},\dots,a_{n}$.
+            نقول عن الشعاع
+            \begin{equation}
+                \vect{A} = a_{1} \vect{A}_{1} + a_{2} \vect{A}_{2} + \dots + a_{n} \vect{A}_{n}
+            \end{equation}
+            أنه <span class="phrase">تركيب خطي linear combination</span>
+            من الأشعة $\vect{A}_{1},\vect{A}_{2},\dots,\vect{A}_{n}$،
+            و أن الأعداد السلمية $a_{1},a_{2},\dots,a_{n}$
+            هي مقدار مساهمة كل شعاع من هذه الأشعة في تشكيل الشعاع $\vect{A}$.
         </p>
         <h3>الجُداء السُّلَّمِي</h3>
         <p>
